DT-2530 - Fix for GDPR bar not being visible

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -321,7 +321,7 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
 }
 
 .gdpr-footer {
-	background-color: darken(@color-swatch6, 25%);
+	background-color: darken(@color-swatch6, 5%);
 	bottom: 0;
 	position: fixed;
 	right: -320px;
